--- a/Project/page.html
+++ b/Project/page.html
@@ -13,8 +13,8 @@
             <h1>LOGO HERE</h1>
         </div>
         <div class="nav-bar">
-            <li><a href="#">Pagina inicial</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="page.html">Pagina inicial</a></li>
+            <li><a href="projetos.html">Projetos</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="contato.html">Contato</a></li>
         </div>
