--- a/Project/contato.html
+++ b/Project/contato.html
@@ -15,7 +15,7 @@
         </div>
         <div class="nav-bar">
             <li><a href="page.html">Pagina inicial</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="projetos.html">Projetos</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="contato.html">Contato</a></li>
         </div>
@@ -25,10 +25,10 @@
         <div class="contact-container">
             <h1>CONTACTO</h1>
             <form action="">
-                <input type="text" placeholder="Nome">
-                <input type="email" placeholder="Email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
-                <button>Enviar</button>
+                <input id="name" type="text" placeholder="Nome" autocomplete="off">
+                <input id="email" type="email" placeholder="Email" autocomplete="off">
+                <textarea name="textarea" id="message" cols="30" rows="10" placeholder="Mensagem"></textarea>
+                <button >Enviar</button>
             </form>
         </div>
     </section>
