--- a/Project/contato.html
+++ b/Project/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing - page </title>
+    <title>Contatos </title>
     <link rel="stylesheet" href="../CSS/contato.css">
     <link rel="stylesheet" href="../CSS/page.css">
 </head>
@@ -30,6 +30,24 @@
                 <textarea name="textarea" id="message" cols="30" rows="10" placeholder="Mensagem"></textarea>
                 <button >Enviar</button>
             </form>
+        </div>
+        <div class="contact-testimonial">
+            <div class="testimonials">
+                <h1>testimonials</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestias dolor, nisi saepe quae quas ratione mollitia, est nihil, sint earum facilis sit fugiat libero. Perferendis ullam magni at blanditiis!</p>
+            </div>
+            <div class="testimonials">
+                <h1>testimonials</h1>
+                <p></p>
+            </div>
+            <div class="testimonials">
+                <h1>testimonials</h1>
+                <p></p>
+            </div>
+            <div class="testimonials">
+                <h1>testimonials</h1>
+                <p></p>
+            </div>
         </div>
     </section>
 </body>
