--- a/Project/page.html
+++ b/Project/page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing - page </title>
+    <title>Página inicial</title>
     <link rel="stylesheet" href="../CSS/page.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
     </nav>
     </header>
 
-    <section class="hero-sec">
+    <section class="hero-section">
         <div class="hero-bg">
         </div>
         <div class="overlay">
